# flint

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/ai/: attention_summary.rs  classifier.rs  mod.rs
apps/desktop/src-tauri/src/app_tracking/: active_app.rs  category.rs  macos.rs  mod.rs  platform.rs  tracker.rs  windows.rs
apps/desktop/src-tauri/src/attention/: drift.rs  event.rs  focus_score.rs  mod.rs  recovery.rs  session.rs  timeline.rs
apps/desktop/src-tauri/src/database/: connection.rs  migrations.rs  repositories.rs
apps/desktop/src-tauri/src/encryption/: keychain.rs  mod.rs  vault.rs
apps/desktop/src-tauri/src/idle/: detector.rs  macos.rs  mod.rs  platform.rs
apps/desktop/src-tauri/src/insights/: insight.rs  mod.rs  rules.rs
apps/desktop/src-tauri/src/privacy/: exclusions.rs  mod.rs  permissions.rs  private_mode.rs
apps/desktop/src-tauri/src/system/: mod.rs  notifications.rs  overlay.rs  tray.rs
apps/desktop/src/app/: App.tsx  AppProviders.tsx  routes.tsx
apps/desktop/src/styles/: attention.css  globals.css  home.css  hud.css  insights.css  overview.css  reports.css  settings.css  shell.css  timeline.css  tokens.css  (+1 more)
scripts/: build-macos.sh
(+37 files in other folders)
