[package]
name = "flint"
version = "0.1.0"
description = "A private attention mirror for focus, drift, and recovery."
authors = ["Flint"]
edition = "2021"

[lib]
name = "flint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"

[patch.crates-io]
tray-icon = { path = "vendor/tray-icon" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSRunningApplication",
  "NSWorkspace"
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
  "CGEventSource",
  "CGEventTypes"
] }
